--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>김상식의 작품</h1>
-    <p>피자헛 메인페이지 시안입니다.</p>
-    <img src="./70_pf/main.jpg" alt="피자헛">
+    <p>쇼핑몰 메인페이지 시안입니다.</p>
+    <img src="./70_pf/main.jpg" alt="쇼핑몰">
 </body>
 </html>
